# Linked-List-C-project

./: README.md
linked-list/: CMakeLists.txt  README.md  memory_management_explanation.txt  program_output.txt
linked-list/src/: main.cpp
